--- a/pages/projects.html
+++ b/pages/projects.html
@@ -1,10 +1,9 @@
 ---
 layout: default
 title: Projetos
-permalink: /projects/
+permalink: 
 weight: 1
 remote_projects: 
-  - git-for-wizards
 ---
 
 {% include projects/index.html %}
